--- a/styles/index.css
+++ b/styles/index.css
@@ -11,16 +11,15 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  display: grid;
+  place-content: center;
+  height:100vh;
+    font-family:var(--font-Lexend-Deca);
 }
 main {
-  max-width: 80rem;
+  max-width: 100rem;
   display: flex;
-  margin: 0 auto;
+  margin: 1rem auto 0 ;
 }
 
 .sedan-section {
@@ -31,12 +30,14 @@ main {
 .sedan-section .learn-more-btn {
   color: var(--sedan-bg);
 }
+
 .suv-section {
   background: var(--suv-bg);
 }
 .suv-section .learn-more-btn {
   color: var(--suv-bg);
 }
+
 .lux-section {
   background: var(--lux-bg);
   border-radius: 0 1rem 1rem 0;
@@ -47,11 +48,13 @@ main {
 .sedan-section,
 .suv-section,
 .lux-section {
-  padding: 3rem;
+  padding: 4rem;
 }
-
+.sedan-section .learn-more-btn:hover,.suv-section .learn-more-btn:hover,.lux-section .learn-more-btn:hover {
+  color: var(--very-light-gray);
+}
 .text-section {
-  margin: 3rem 0;
+  margin: 3rem 0 2rem 1rem ;
 }
 
 .title {
@@ -64,23 +67,55 @@ main {
   color: var(--paragraphs);
   font-family: var(--font-Lexend-Deca);
   line-height: 2;
-  margin: 3rem 0 6rem 0;
+  margin: 4rem 0 6rem 0;
+  font-size:1.7rem;
 }
 .learn-more-btn {
-  padding: 3rem 2rem;
+  padding: 1.5rem;
   border-radius: 5rem;
   background: var(--very-light-gray);
+   border:1px solid var(--very-light-gray);
   text-decoration: none;
   display: inline-block;
-  width: 100%;
+  width: 80%;
   text-align: center;
-  font: 2rem var(--font-Lexend-Deca);
+  font: 1.8rem var(--font-Lexend-Deca);
 }
-
+.learn-more-btn:hover{
+  background:transparent;
+ 
+}
 .attribution {
   font-size: 1.1rem;
   text-align: center;
+  margin:1rem 0;
+  background:var(--very-light-gray);
+  padding:.3rem;
+  border-radius:.3rem;
+  
 }
 .attribution a {
   color: var(--footer-link);
+
+}
+
+@media screen and (max-width:60rem){
+  body {
+  display: grid;
+  place-content: center;
+  height:auto
+}
+  main{
+    max-width:32rem;
+    flex-direction: column
+  }
+  
+.sedan-section { 
+  border-radius: 1rem 1rem 0 0;
+}
+  
+.lux-section {  
+  border-radius: 0 0 1rem 1rem;
+}
+  
 }
